# mipt-airdrone

./: .gitignore  LICENSE  README.md
src/action_client/: CMakeLists.txt  CMakeLists.txt~  main.cpp~  main.py  main.py~  package.xml~
src/action_client/action/: ApproachDoor.action  ApproachWall.action  Move (copy).action~  MoveAlong.action  Rotation.action~  SwitchWall.action  Test.action
src/action_server/: CMakeLists.txt  CMakeLists.txt~  RANSAC.cpp  RANSAC.h  da_vinci.cpp  da_vinci.h  main.cpp  main.cpp~  package.xml  passage_finder.cpp  passage_finder.h  pid_regulator.h
src/action_server/action/: .gitignore  ApproachDoor.action  DebugState.action  Landing.action  Locate_door.action  PassDoor.action
src/airdrone/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/airdrone/launch/: airdrone.launch  airdrone.launch~  airdrone_simulator.launch  airdrone_simulator.launch~
src/airdrone/lib/KinectIN/: CMakeLists.txt  CMakeLists.txt~  kin.h  kin_control.cpp  kin_process.cpp
src/airdrone/lib/PCV/: CMakeLists.txt  CMakeLists.txt~  pcv.cpp  pcv.h
src/airdrone/lib/Pose/: CMakeLists.txt  CMakeLists.txt~  position.cpp  position.cpp~  position.h  position.h~
src/airdrone/worlds/: Untitled.dae  my_mesh.world
src/airdrone_gazebo/: CMakeLists.txt  CMakeLists.txt~  README.md  main.cpp~  package.xml  package.xml~
src/airdrone_gazebo/Media/models/: test_chamber0.dae
src/airdrone_gazebo/drone/: spawn_quadrotor.launch
src/airdrone_gazebo/drone/frame/urdf/: quadrotor.gazebo.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  (+12 more)
src/airdrone_gazebo/drone/plugins/: plugin.xml
src/airdrone_gazebo/launch/: croc_map.launch  croc_test_chamber0.launch  croc_test_chamber0.launch~
src/airdrone_gazebo/map/worlds/: croc_map.world
src/airdrone_gazebo/quadrotor_description/launch/: spawn_quadrotor.launch
src/airdrone_gazebo/quadrotor_description/urdf/: quadrotor.gazebo.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_downward_cam.gazebo.xacro  quadrotor_downward_cam.urdf.xacro  quadrotor_hokuyo_utm30lx.gazebo.xacro  quadrotor_hokuyo_utm30lx.urdf.xacro  quadrotor_with_asus.gazebo.xacro  quadrotor_with_asus.urdf.xacro  quadrotor_with_asus_with_hokuyo_utm30lx.gazebo.xacro  quadrotor_with_asus_with_hokuyo_utm30lx.urdf.xacro  quadrotor_with_cam.gazebo.xacro  quadrotor_with_kinect.gazebo.xacro  quadrotor_with_kinect.urdf.xacro
src/airdrone_gazebo/worlds/: croc_map.world  croc_test_chamber.world~  my_mesh.world~  test_chamber0.world  test_chamber0.world~
src/airdrone_launch/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  param.yaml
src/airdrone_launch/inherited_from_hector/launch/: spawn_quadrotor.launch
src/airdrone_launch/inherited_from_hector/urdf/: quadrotor_with_kinect.gazebo.xacro  quadrotor_with_kinect.urdf.xacro
src/airdrone_launch/launch/: airdrone.launch  airdrone.launch~  airdrone_real.launch  airdrone_simulator.launch  airdrone_simulator.launch~  debug.launch  indoor_custom.launch~  localization.launch  simulator.launch  tf_publisher.launch  workstation.launch
src/airdrone_launch/rviz_cfg/: croc_indoor.rviz  croc_real.rviz
src/altitude_cntrl/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~  package.xml~  ransac.cpp  ransac.h
src/keyboard_control/: CMakeLists.txt  main.cpp  package.xml
src/keyboard_control/launch/: keyboard_control.launch
src/localization/ccny_rgbd/ccny_openni_launch/: CMakeLists.txt  package.xml
src/localization/ccny_rgbd/ccny_rgbd/: CMakeLists.txt  package.xml
src/localization/ccny_rgbd/ccny_rgbd_data/: CMakeLists.txt  package.xml
src/localization/ccny_rgbd/lib_rgbdtools/: CMakeLists.txt  package.xml
src/localization/marker_detector/: CMakeLists.txt  detector.cpp  detector.h  main.cpp
src/localization/marker_detector/cascades/: mycrossdetector10.xml  mycrossdetector3.xml
src/localization/optical_flow/: CMakeLists.txt  package.xml
src/localization/optical_flow/launch/: farn_parameters.yaml  test_px4flow.launch
src/localization/optical_flow/optical_flow_drivers/: raw_flow_to_odom.cpp
src/localization/optical_flow/rviz_cfg/: of_test.rviz
src/localization/ransac_slam/: CMakeLists.txt  advanced_types.cpp  advanced_types.h  da_vinci.cpp  da_vinci.h  lines.cpp  lines.h  main.cpp  package.xml  passage.cpp  passage.h  passage_finder.cpp  passage_finder.h
src/localization/ransac_slam/msg/: LineMap.msg
src/localization/slam_hec/: CMakeLists.txt  package.xml
src/localization/slam_hec/launch/: hector_slam.rviz  mapping.launch  slam.launch  slam_handheld.launch
src/optical_flow/: CMakeLists.txt  flow.cpp  main.cpp  optical_flow.launch  package.xml  px_flow_to_odom.cpp
src/optical_flow/launch/: farn_parameters.yaml  test_cpu_farn.launch  test_gpu_farn.launch
src/optical_flow/msg/: OpticalFlow.msg
src/optical_flow/optical_flow_drivers/: raw_flow_to_odom.cpp
src/rgbd_shrinker/: CMakeLists.txt  CMakeLists.txt~  main.cpp  package.xml  package.xml~
src/sensor_drivers/apm_imu_driver/: CMakeLists.txt  main.cpp  package.xml
src/sensor_drivers/apm_imu_driver/launch/: apm.launch
src/sensor_drivers/px-ros-pkg/flow_to_odom/: CMakeLists.txt  flow_to_odom.cpp  package.xml
src/sensor_drivers/rgbd_shrinker/: CMakeLists.txt  main.cpp  package.xml
src/sensor_drivers/roscopter/: CMakeLists.txt  README.md  package.xml  readme.txt  setup.py
src/sensor_drivers/roscopter/etc/: 50-apm.rules
src/sensor_drivers/roscopter/launch/: roscopter.launch
src/sensor_drivers/roscopter/msg/: ControllerOutput.msg  CurrentMission.msg  MissionItem.msg  RC.msg  Status.msg
src/sensor_drivers/roscopter/nodes/: close.py  imu_transform_publish.py  roscopter_node.py
src/sensor_drivers/roscopter/scripts/: driver.py  imu_transform_publish.py  waypoint_tester.py
src/sensor_drivers/roscopter/srv/: APMCommand.srv  SendWaypoint.srv
src/tf_manager/: CMakeLists.txt  package.xml  tf_manager.cpp
src/vel_cntrl/: CMakeLists.txt  CMakeLists.txt~  main.cpp  package.xml  package.xml~
src/vel_cntrl/msg/: FilteredPosition.msg  State.msg  Waypoint.msg
src/vel_cntrl/srv/: SendWaypointList.srv  XBEECommand.srv
(+139 files in other folders)
