<?xml version="1.0"?>
<package>
  <name>airdrone_gazebo</name>
  <version>0.1.0</version>
  <description>This node provides some custom maps for croc aerial robotics competition</description>
  <maintainer email="anton.mitrokhin@phystech.edu">ncos</maintainer>
  <license>MIT</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>topic_tools</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
