<?xml version="1.0"?>
<package>
  <name>slam_hec</name>
  <version>0.1.0</version>
  <description>This node provides interface for copter localization</description>
  <maintainer email="anton.mitrokhin@phystech.edu">ncos</maintainer>
  <license>MIT</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
</package>
