<?xml version="1.0"?>
<package>
  <name>apm_imu_driver</name>
  <version>0.1.0</version>
  <description>This is a simple converter of IMU data from APM2.0 to 'sensor_msgs/Imu'. The data from here is sent to 'robot_pose_ekf' node for pose estimation</description>

<!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="anton.mitrokhin@phystech.edu">ncos</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscopter</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscopter</run_depend>



</package>
