<?xml version="1.0"?>
<package>
  <name>roscopter</name>
  <version>0.0.0</version>
  <description>The roscopter package</description>

  <maintainer email="epsilonorion@gmail.com">Joshua Weaver</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://ros.org/wiki/roscopter</url> -->

  <author email="epsilonorion@gmail.com">Joshua Weaver</author>
  <author email="pechkas@gmail.com">Yogesh Alok Girdhar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavlink</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mavlink</run_depend>

  <export>

  </export>
</package>
