<?xml version="1.0"?>
<package>
<name>ccny_openni_launch</name>
  <version>0.1.0</version>
  <description>Helper launch files for OpenNI devices, including data processing, recording, and playback</description>
  <author>Ivan Dryanovski, Anton Mitrokhin</author>
  <maintainer email="anton.mitrokhin@phystech.edu">Anton Mitrokhin</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/ccny_openni_launch</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
</package>


